Weird Skin modifier shutdown #39266

Closed
opened 2014-03-19 16:29:17 +01:00 by Karja Krähwald · 12 comments

System Information
Windows 7 64, HD 5770

Blender Version
Broken: 2.69 release & Hash a91247c

Short description of error
I think its an out-of-memory issue.
Happened by accident and is hard to describe briefly, better go straight to file and steps.


In any case, following must be true for the shutdown:

  • Mesh modifiers: Mirror (merge) > Curve > Skin
  • Skin Root point is on the mirror axis and mirror should not overwrite the whole mesh.
  • Have to use Nurbs Curve/Nurbs Circle/Path to get zero dimensions for curve.
  • Curve minimum vertice number = 3

I guess its because of Skins automatic geometrygeneration in some way.
Maybe related to #38003 and the problem with zero (0).

Exact steps for others to reproduce the error
Skin_bug.blend
Curve deforms the mesh. Snap curves vertices together at any point.

Steps:

  • Create a edge (Mesh) with one vertice in its object center.

  • Mirror modifier the edge in opposite direction. You should have 2 connected edges now.

  • Add a curve modifier.

  • Add a skin modifier - make sure to assign the root point on the center vertice.

  • Add a NurbsPath curve and use it in the meshs modifier.

  • Curve Editmode: select all vertices.

Problem: Snap Selection to Cursor closes my Blender.

**System Information** Windows 7 64, HD 5770 **Blender Version** Broken: 2.69 release & Hash a91247c **Short description of error** I think its an out-of-memory issue. Happened by accident and is hard to describe briefly, better go straight to file and steps. --- In any case, following must be true for the shutdown: - Mesh modifiers: Mirror (merge) > Curve > Skin - Skin Root point is on the mirror axis and mirror should not overwrite the whole mesh. - Have to use Nurbs Curve/Nurbs Circle/Path to get zero dimensions for curve. - Curve minimum vertice number = 3 I guess its because of Skins automatic geometrygeneration in some way. Maybe related to #38003 and the problem with zero (0). **Exact steps for others to reproduce the error** [Skin_bug.blend](https://archive.blender.org/developer/F81841/Skin_bug.blend) Curve deforms the mesh. Snap curves vertices together at any point. Steps: - Create a edge (Mesh) with one vertice in its object center. - Mirror modifier the edge in opposite direction. You should have 2 connected edges now. - Add a curve modifier. - Add a skin modifier - make sure to assign the root point on the center vertice. - Add a NurbsPath curve and use it in the meshs modifier. - Curve Editmode: select all vertices. Problem: Snap Selection to Cursor closes my Blender.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @karja

Added subscriber: @karja

Added subscriber: @Sergey

Added subscriber: @Sergey

This sounds like a bug we've fixed already. Did you try using 2.70 official release?

This sounds like a bug we've fixed already. Did you try using 2.70 official release?

Have tried in 19e627c (2.7 release) and 3406ef8 from today.

Still occurs.
I think this is a different bug.

Have tried in 19e627c (2.7 release) and 3406ef8 from today. Still occurs. I think this is a different bug.

Well, ok. Can't reproduce tho. Will leave to others :)

Well, ok. Can't reproduce tho. Will leave to others :)
Sergey Sharybin self-assigned this 2014-04-10 18:47:01 +02:00

Can see some assert failures tho, would try to dig into the issue.

Can see some assert failures tho, would try to dig into the issue.

Maybe this helps to reproduce:

  • If i delete all curve vertices except the first (in the center), and then extrude this remaining one -> crash.

  • If i delete the 3. vertice (left side) and snap only 2 vertices together its a slow crash (white screen)(Has worked some time ago, now its a crash). So perhaps you have to extrude the curve or the mesh and snap more vertices together.

Maybe this helps to reproduce: - If i delete all curve vertices except the first (in the center), and then extrude this remaining one -> crash. - If i delete the 3. vertice (left side) and snap only 2 vertices together its a slow crash (white screen)(Has worked some time ago, now its a crash). So perhaps you have to extrude the curve or the mesh and snap more vertices together.

This issue was referenced by blender/blender-addons-contrib@a3f5e6c76f

This issue was referenced by blender/blender-addons-contrib@a3f5e6c76f08cfb60556c18e1605ed9b8cfa0d5d

This issue was referenced by a3f5e6c76f

This issue was referenced by a3f5e6c76f08cfb60556c18e1605ed9b8cfa0d5d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit a3f5e6c76f.

Closed by commit a3f5e6c76f.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39266
No description provided.