Fix T39266: Weird Skin modifier shutdown

Fix wrong quat being calculated for curve's path.
Also avoid some divisions by zero.

Happened in cases when all the curve points have the same coord.